force-app/main/default/objects/Action_Master__c/Action_Master__c.object-meta.xml
<CustomObject>
    <label>Action Master</label>
    <nameField>
        <label>Action Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>