force-app/main/default/objects/Action_Master__c/fields/Action_Detail__c.field-meta.xml
<CustomField>
    <fullName>Action_Detail__c</fullName>
    <label>Action Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>