force-app/main/default/objects/Action_Master__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actions Master</relationshipLabel>
    <relationshipName>Actions_Master</relationshipName>
    <type>Lookup</type>
</CustomField>