force-app/main/default/objects/Action_Master__c/fields/Question_Choice_Master__c.field-meta.xml
<CustomField>
    <fullName>Question_Choice_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Choice Master</label>
    <referenceTo>Question_Choice_Master__c</referenceTo>
    <relationshipLabel>Actions Master</relationshipLabel>
    <relationshipName>Actions_Master</relationshipName>
    <type>Lookup</type>
</CustomField>